# fundwise

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json  pytest.ini
data/metadata/: fundwise.db
data/normalized/603019_SH/: financial_indicators-2024-12-31.csv  market_cap_history-2026-02-26.csv  price_history-2026-02-26.csv
docs/: AKShare-东方财富数据接口一览.md  AKShare数据字典.csv  AKShare数据字典.html  AKShare数据字典.json  AKShare数据字典使用说明.md  AkShare接口可用性与字段校验说明.md  架构与设计说明.md
docs/观察池/: AIDC&IDC 算力观察池（A股+港股）.md  公司页.md
reports/company_dossier/603019_SH/: company-dossier-2026-02-26.md
scripts/: __init__.py  akshare_em_availability.py  check_pipeline_health.py  export_akshare_dictionary.py  fetch_company_dataset.py  generate_company_report.py  generate_market_timing_report.py  generate_pipeline_history_report.py  generate_structured_markdown_report.py  generate_watchlist_report.py  init_sqlite.py  run_daily_pipeline.py  upsert_fx_rate.py
src/fundwise/: __init__.py
tests/: conftest.py  test_akshare_adapter.py  test_akshare_dictionary.py  test_akshare_em_availability.py  test_akshare_live_contracts.py  test_akshare_live_industry_contracts.py  test_akshare_live_minimal.py  test_chart_renderer.py  test_company_dossier.py  test_daily_pipeline.py  test_market_timing_panel.py  test_pipeline_ops.py  test_report_engine.py  test_sqlite_data_jobs.py  test_sqlite_fx_rates.py  test_sqlite_metadata_schema.py  test_sqlite_report_record.py  test_sqlite_snapshot_record.py  test_sqlite_symbols_registry.py  test_symbols.py  test_watchlist_scorer.py
(+33 files in other folders)
