[project]
name = "fundwise"
version = "0.1.0"
description = "Fundwise research workflow with AkShare"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.18.30",
  "pandas>=2.2.0",
  "matplotlib>=3.9.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[tool.uv]
package = false
